# Simulations-Geant4

./: .gitignore  CMakeLists.txt  README.md  init_vis.mac  muon.cc  pet.cc  run.mac  start.py  start_hz.py  vis.mac
EasyPET/: pet.cc  start_hz.py
EasyPET/include/: pet_DetectorMessenger.hh  pet_EventAction.hh  pet_PhysicsList.hh  pet_PrimaryGeneratorAction.hh  pet_RunAction.hh  pet_SteppingAction.hh
EasyPET/src/: pet_ActionInitialization.cc  pet_DetectorConstruction.cc  pet_PhysicsList.cc  pet_PrimaryGeneratorAction.cc  pet_SteppingAction.cc
Muon-detector_labUS/: CMakeLists.txt  muon.cc  run.mac
Muon-detector_labUS/include/: muon_DetectorConstruction.hh  muon_EventAction.hh  muon_PrimaryGeneratorAction.hh  muon_RunAction.hh
Muon-detector_labUS/src/: muon_ActionInitialization.cc  muon_PhysicsList.cc  muon_SteppingAction.cc
Workshops/SummerSchool-VINCI/: CMakeLists.txt  muon.cc  muon_run  run.mac  start_new.py
Workshops/SummerSchool-VINCI/Day_2_latest/: run.mac  (+2 more)
include/: muon_ActionInitialization.hh  muon_DetectorConstruction.hh  muon_EventAction.hh  muon_PhysicsList.hh  muon_PrimaryGeneratorAction.hh  pet_ActionInitialization.hh  pet_DetectorConstruction.hh  pet_DetectorMessenger.hh  pet_EventAction.hh  pet_PrimaryGeneratorAction.hh
src/: muon_DetectorConstruction.cc  muon_EventAction.cc  muon_PhysicsList.cc  muon_PrimaryGeneratorAction.cc  muon_RunAction.cc  muon_SteppingAction.cc  pet_ActionInitialization.cc  pet_DetectorConstruction.cc  pet_DetectorMessenger.cc  pet_EventAction.cc  pet_PrimaryGeneratorAction.cc  pet_RunAction.cc  pet_SteppingAction.cc
(+18 files in other folders)
